# youtube-pub-mcp

./: .gitignore  README.md  pyproject.toml
.planning/: requirements.md  roadmap.md
docs/: scheduler-schema.md  setup.md
src/youtube_pub_mcp/: auth.py  cli.py  scheduler.py  youtube.py
tests/: test_scheduler.py
